--- a/Demo/Resources/layout/less_overdraw_row.axml
+++ b/Demo/Resources/layout/less_overdraw_row.axml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white">
+    android:layout_height="wrap_content">
     <FFImageLoading.Views.ImageViewAsync
         android:id="@+id/monkeyMug"
         android:layout_width="80dp"
@@ -10,31 +9,23 @@
         android:scaleType="centerInside"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true" />
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/monkeyName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/monkeyMug"
         android:layout_toStartOf="@+id/score"
-        android:background="@android:color/white"
-        android:orientation="horizontal"
+        android:layout_centerVertical="true"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp">
-        <TextView
-            android:id="@+id/monkeyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:text="My Name is Monkey"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-    </LinearLayout>
+        android:paddingRight="5dp"
+        android:text="My Name is Monkey"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
     <TextView
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:background="@android:color/white"
         android:padding="5dp"
         android:text="Score 9001"
         android:textAppearance="?android:attr/textAppearanceMedium" />
