--- a/Demo/Resources/layout/Main.axml
+++ b/Demo/Resources/layout/Main.axml
@@ -9,8 +9,18 @@
         android:layout_height="wrap_content"
         android:text="Verbose" />
     <Button
-      android:id="@+id/button_overdraw"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Overdraw" />
+        android:id="@+id/button_overdraw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Overdraw" />
+  <Button
+    android:id="@+id/button_nested"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Nested" />
+  <Button
+    android:id="@+id/button_constraints"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Constraints" />
 </LinearLayout>
