More overdraw please

--- a/Demo/Resources/layout/overdraw_row.axml
+++ b/Demo/Resources/layout/overdraw_row.axml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/white">
     <FFImageLoading.Views.ImageViewAsync
         android:id="@+id/monkeyMug"
         android:layout_width="80dp"
@@ -15,6 +16,7 @@
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/monkeyMug"
         android:layout_toStartOf="@+id/score"
+        android:background="@android:color/white"
         android:orientation="horizontal"
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
@@ -23,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My Name is Monkey"
+            android:textColor="@android:color/black"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
     <TextView
@@ -33,5 +36,6 @@
         android:layout_centerVertical="true"
         android:padding="5dp"
         android:text="Score 9001"
+        android:textColor="@android:color/black"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 </RelativeLayout>
